feat: UI Updates

--- a/src/styles/variables/colors.styl
+++ b/src/styles/variables/colors.styl
@@ -1,3 +1,6 @@
 $table-color =  #71634E
 $background-color = #1C1C1C
-$player-area-color = #C4C4C4
+$player-area-color = #3f556f
+$player-area-color--empty = rgba(63, 85, 111, 0.2)
+$player-name-color = #ffb308
+$player-name-shadow-color = #30b2e4
